--- a/style.css
+++ b/style.css
@@ -41,3 +41,26 @@ h1{
     width: 500px;
     height: 500px;
 }
+@media screen and (max-width: 600px){
+    div.num_box{
+        position: absolute;
+        width: 360px;
+        margin-left: 50px;
+        padding: 10px 0 0 ;
+    }
+    img{
+        width: 50px;
+        height: 50px;
+    }
+    .btn{
+        width:50px;
+        height: 50px;
+        margin: 20px 10px;
+    }
+    .b9{
+        margin-left:80px ;
+    }
+    .b10{
+        margin:10px;
+    }
+}
